--- a/packages/kg-default-cards/package.json
+++ b/packages/kg-default-cards/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tryghost/kg-default-cards",
-  "version": "9.0.0",
+  "version": "9.0.1-alpha.0",
   "repository": "https://github.com/TryGhost/Koenig/tree/master/packages/kg-default-cards",
   "author": "Ghost Foundation",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "sinon": "15.0.3"
   },
   "dependencies": {
-    "@tryghost/kg-markdown-html-renderer": "^6.0.6",
+    "@tryghost/kg-markdown-html-renderer": "^6.0.7-alpha.0",
     "@tryghost/string": "^0.2.0",
     "@tryghost/url-utils": "^4.0.0",
     "handlebars": "^4.7.6",
