--- a/packages/koenig-lexical/package.json
+++ b/packages/koenig-lexical/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tryghost/koenig-lexical",
-  "version": "0.0.95",
+  "version": "0.0.96-alpha.0",
   "repository": "https://github.com/TryGhost/Koenig/tree/master/packages/koenig-lexical",
   "author": "Ghost Foundation",
   "license": "MIT",
@@ -49,10 +49,10 @@
     "@lexical/text": "^0.10.0",
     "@lexical/utils": "^0.10.0",
     "@lezer/highlight": "^1.1.3",
-    "@tryghost/kg-clean-basic-html": "^3.0.13",
-    "@tryghost/kg-default-nodes": "^0.0.37",
-    "@tryghost/kg-markdown-html-renderer": "^6.0.6",
-    "@tryghost/kg-simplemde": "^2.0.11",
+    "@tryghost/kg-clean-basic-html": "^3.0.14-alpha.0",
+    "@tryghost/kg-default-nodes": "^0.0.38-alpha.0",
+    "@tryghost/kg-markdown-html-renderer": "^6.0.7-alpha.0",
+    "@tryghost/kg-simplemde": "^2.0.12-alpha.0",
     "@uiw/react-codemirror": "^4.19.6",
     "codemirror": "^6.0.1",
     "dompurify": "^3.0.0",
